working layout issue

--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@
 }
 /* Header container css */
 .header-container {
-  width: 1300px;
+  width: 990px;
   margin: 14px auto;
   display: flex;
   padding: 12px;
+  /* border:2px solid red; */
   align-items: center;
 }
 .header-container header {
@@ -19,7 +20,13 @@
   padding: 12px 12px;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 80px;
+  margin-bottom: 40px;
+}
+header span{
+  font-weight:800;
+  color: #1E0E62;
+
+  font-size: 24px;
 }
 .nav-links {
   display: flex;
@@ -32,16 +39,16 @@
   font-family: "DM Sans", sans-serif;
   font-weight: 500;
   font-size: 18px;
-  line-height: 22px;
-  letter-spacing: 0px;
+
+}
+.nav-items:hover{
+text-decoration:underline;
+cursor:pointer;
 }
 .btn {
   margin: 0 12px;
-  width: 40;
-  height: 22;
   font-size: 16px;
   line-height: 22px;
-  letter-spacing: 0px;
 }
 .btn-primary {
   outline: none;
@@ -58,17 +65,15 @@
   background-color: #25dac5;
   color: white;
   font-weight: 500;
-  font-size: 18px;
-  line-height: 26px;
-  letter-spacing: 0px;
+  font-size: 18px;  
   text-align: center;
   cursor: pointer;
 }
 /* main container css */
 .main-container .section-1 {
-  width: 1300px;
-  margin: auto;
-
+  width: 990px;
+  /* border:2px solid red; */
+  margin:0 auto 100px auto ;
   display: flex;
   padding: 12px;
   flex-direction: column;
@@ -78,9 +83,9 @@
   text-align: center;
   color: #1e0e62;
   width: 700px;
-  font-size: 62px;
+  font-size: 58px;
   font-weight: 700;
-  margin-bottom: 12px;
+  margin-bottom: 15px;
 }
 .section-1 p {
   width: 600px;
@@ -91,26 +96,28 @@
 }
 .section-1 a {
   text-decoration: none;
-  width: 180px;
   background: #e93a7d;
+  width: 180px;
+  text-align: center;
   padding: 20px 45px;
   border-radius: 45px;
-  text-align: center;
+  margin-right:40px;
+  cursor: pointer;
   color: #fff;
   font-size: 20px;
-  word-wrap: initial;
   font-weight: 500;
-  margin-bottom: 150px;
-  cursor: pointer;
+
 }
 .main-container .section-2 {
+  width: 990px;
+  /* border:2px solid red; */
   padding: 12px;
-  width: 1300px;
-  margin: auto;
+  margin: 0 auto;
 }
 .main-container .section-2 ul {
   display: flex;
-  width: 1300px;
+  /* width: 1300px; */
+  /* border:2px solid red; */
   justify-content: space-between;
 }
 .section-2 ul li {
@@ -123,12 +130,13 @@
 li img {
   width: 180px;
   align-items: center;
-  margin-bottom: 14px;
+  margin-bottom: 30px;
+ 
 }
 li p {
   text-align: center;
-  font-size: 16px;
-  width: 200px;
+  font-size: 18px;
+  width: 220px;
   color: #15143966;
 }
 .lines {
